--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
   }
